--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,32 @@
 }
 
 
+.navbar{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  line-height: 26px;
+  text-transform: uppercase;
+  box-shadow: 0 8px 6px -6px gray;
+}
+.active{
+  border-bottom: 1px solid black;
+}
+
+.footer{
+  padding: 25px;
+  background-color: black;
+  text-align: center;
+  color: aliceblue;
+}
+.footer a{
+  padding: 12px;
+  text-decoration: none;
+}
+.footer a:hover{
+  color: green;
+}
    
- 
+.login{
+  padding-top: 200px;
+}
     
